--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "index.js"
+        "dest": "index.js",
+        "methods": ["POST", "GET", "PUT", "PATCH", "DELETE", "OPTIONS"]
       }
     ]
   }
